Create crud for users && litle refactor project structure
